# smart-doorbell

./: .gitignore  CMakeLists.txt  Hello.cpp  Hello.h  Main.cpp  Makefile  OLD_CMakeLists.txt  README.md  README.txt  VideoRecorder.cpp  VideoRecorder.hpp  WebAppConfig.txt  dox.config  gui.cpp  gui.h  hello.txt  vcpkg.json
html/: Camera_8hpp.html  Camera_8hpp_source.html  CircularBuffer_8hpp.html  CircularBuffer_8hpp_source.html  DisplayWindow_8hpp.html  DisplayWindow_8hpp_source.html  Doorbell_8hpp.html  Doorbell_8hpp_source.html  FaceDetector_8hpp.html  FaceDetector_8hpp_source.html  VideoRecorder_8hpp.html  VideoRecorder_8hpp_source.html  WebApp_8hpp.html  WebApp_8hpp_source.html  annotated.html  classCamera-members.html  classCamera.html  classCircularBuffer-members.html  classCircularBuffer.html  classDisplayWindow-members.html  classDisplayWindow.html  classDoorbell-members.html  classDoorbell.html  classFaceDetector-members.html  classFaceDetector.html  classVideoRecorder-members.html  classVideoRecorder.html  classWebApp-members.html  classWebApp.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js
html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  searchdata.js  variables_1.js  variables_10.js  variables_2.js  variables_3.js  (+10 more)
include/: Camera.h  Camera.hpp  CircularBuffer.hpp  DisplayWindow.h  DisplayWindow.hpp  Doorbell.h  Doorbell.hpp  FaceDetector.hpp  VideoRecorder.h  VideoRecorder.hpp  WebApp.hpp
include/atkmm-1.6/: atkmmconfig.h
include/atkmm-1.6/atkmm/: action.h  component.h  document.h  editabletext.h  hyperlink.h  hypertext.h  image.h  implementor.h  noopobject.h  object.h  objectaccessible.h  range.h  relation.h  relationset.h  selection.h  stateset.h  streamablecontent.h  table.h  text.h  value.h
include/cairo/: cairo-ft.h
include/gdkmm-3.0/: gdkmmconfig.h
include/gdkmm-3.0/gdkmm/: applaunchcontext.h  color.h  cursor.h  device.h  devicemanager.h  display.h  displaymanager.h  dragcontext.h  drawingcontext.h  event.h  frameclock.h  frametimings.h  glcontext.h  monitor.h  pixbuf.h  pixbufanimation.h  pixbufanimationiter.h  pixbufformat.h  pixbufloader.h  rectangle.h  rgba.h  screen.h  seat.h  timecoord.h  types.h  visual.h  window.h
include/giomm-2.4/: giommconfig.h
include/giomm-2.4/giomm/: action.h  actiongroup.h  actionmap.h  appinfo.h  applaunchcontext.h  application.h  applicationcommandline.h  asyncinitable.h  asyncresult.h  bufferedinputstream.h  bufferedoutputstream.h  cancellable.h  charsetconverter.h  converter.h  converterinputstream.h  converteroutputstream.h  credentials.h  datainputstream.h  dataoutputstream.h  dbusactiongroup.h  dbusaddress.h  dbusauthobserver.h  dbusconnection.h  dbuserror.h  dbuserrorutils.h  dbusinterface.h  dbusinterfaceskeleton.h  dbusinterfacevtable.h  dbusintrospection.h  dbusmenumodel.h  dbusmessage.h  dbusmethodinvocation.h  dbusobject.h  dbusobjectmanager.h  dbusobjectmanagerclient.h  dbusobjectmanagerserver.h  dbusobjectproxy.h  dbusobjectskeleton.h  dbusownname.h  dbusproxy.h  (+96 more)
include/glib-2.0/: glibconfig.h
include/glib-2.0/gio/: gioenumtypes.h
include/glib-2.0/glib/: galloca.h  gdir.h
include/glibmm-2.4/: glibmmconfig.h
include/glibmm-2.4/glibmm/: balancedtree.h  binding.h  bytearray.h  bytes.h  checksum.h  convert.h  date.h  datetime.h  enums.h  fileutils.h  iochannel.h  keyfile.h  markup.h  miscutils.h  module.h  nodetree.h  optioncontext.h  optionentry.h  optiongroup.h  regex.h  shell.h  spawn.h  thread.h  threads.h  timezone.h  unicode.h  uriutils.h  value_basictypes.h  valuearray.h  variant.h  variant_basictypes.h  variantdict.h  variantiter.h  varianttype.h
include/gtk-3.0/gdk/: gdkversionmacros.h
include/gtk-3.0/gtk/: gtkversion.h
include/gtkmm-3.0/: gtkmm.h  gtkmmconfig.h
include/gtkmm-3.0/gtkmm/: aboutdialog.h  accelgroup.h  accellabel.h  action.h  actionable.h  actionbar.h  actiongroup.h  activatable.h  adjustment.h  alignment.h  appchooser.h  appchooserbutton.h  appchooserdialog.h  appchooserwidget.h  application.h  applicationwindow.h  arrow.h  aspectframe.h  assistant.h  bin.h  border.h  box.h  buildable.h  builder.h  button.h  buttonbox.h  calendar.h  cellarea.h  cellareabox.h  cellareacontext.h  celleditable.h  celllayout.h  cellrenderer.h  cellrendereraccel.h  cellrenderercombo.h  cellrendererpixbuf.h  cellrendererprogress.h  cellrendererspin.h  cellrendererspinner.h  (+195 more)
include/pangomm-1.4/: pangommconfig.h
latex/: Camera_8hpp.tex  Camera_8hpp_source.tex  CircularBuffer_8hpp.tex  CircularBuffer_8hpp_source.tex  DisplayWindow_8hpp.tex  DisplayWindow_8hpp_source.tex  Doorbell_8hpp.tex  Doorbell_8hpp_source.tex  FaceDetector_8hpp.tex  FaceDetector_8hpp_source.tex  VideoRecorder_8hpp.tex  VideoRecorder_8hpp_source.tex  WebApp_8hpp.tex  WebApp_8hpp_source.tex  annotated.tex  classCamera.tex  classCircularBuffer.tex  classDisplayWindow.eps  classDisplayWindow.tex  classDoorbell.tex  classFaceDetector.tex  classVideoRecorder.tex  classWebApp.eps  classWebApp.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  refman.tex
lib/atkmm-1.6/: libatkmm-1.6.so.1
lib/cairomm-1.0/: libcairomm-1.0.so.1
lib/gdkmm-3.0/: libgdkmm-3.0.so.1
lib/giomm-2.4/: libgiomm-2.4.so.1
lib/glibmm-2.4/: libglibmm-2.4.so.1
lib/opencv4/: libopencv_highgui.so.4.7.0  libopencv_highgui.so.407  libopencv_videoio.so.4.7.0  libopencv_videoio.so.407
lib/pangomm-1.4/: libpangomm-1.4.so.1
lib/sigc++-2.0/: libsigc-2.0.so.0
src/: Camera.cpp  CircularBuffer.cpp  DisplayWindow.cpp  Doorbell.cpp  FaceDetector.cpp  Main.cpp  VideoRecorder.cpp  WebApp.cpp
(+697 files in other folders)
